# voice-ai-appointments

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_transcripts_and_recordings.py
scripts/: seed_refdata.py  setup_livekit_sip.sh
src/clinic_agent/: agent.py  alerting.py  config.py  entrypoint.py  logging_setup.py  recording.py  state.py
src/clinic_agent/api/: main.py  webhooks.py
src/clinic_agent/cliniko/: __init__.py  client.py  errors.py  models.py  operations.py  utils.py
src/clinic_agent/db/: models.py  repo.py  session.py
src/clinic_agent/refdata/: __init__.py  cache.py  sync.py
src/clinic_agent/tools/: __init__.py  availability.py  booking.py  call_control.py  discovery.py  identify.py  manage.py
tests/: conftest.py  test_alerting.py  test_availability_paging.py  test_cliniko_client.py  test_cliniko_utils.py  test_tools_booking.py
