[project]
name = "clinic-voice-agent"
version = "0.1.0"
description = "Bilingual voice AI receptionist for a multi-branch clinic, built on LiveKit Agents and Cliniko."
requires-python = ">=3.11"
dependencies = [
    "livekit-agents[silero,openai,azure,turn-detector]~=1.0",
    "livekit-plugins-sarvam~=1.0",
    "livekit-plugins-noise-cancellation~=0.3",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-dotenv>=1.0",
    # zoneinfo (used for UTC <-> clinic-local-time conversion) relies on the
    # OS having an IANA tz database - not guaranteed on Windows and not
    # guaranteed on minimal Linux Docker base images either. This pure-Python
    # tzdata package is the portable fallback zoneinfo uses automatically.
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
